# warfork-qfusion

./: .appveyor.yml  .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE.txt  README.md  uncrustify.cfg
.circleci/: config.yml
.github/workflows/: build.yml
assets/: README.md  autoexec_postinit.cfg  dedicated_autoexec.cfg  default.cfg  tvserver_autoexec.cfg
assets/configs/: remove_ultralow.cfg  ultralow.cfg
assets/configs/server/: cheatvars.txt
assets/configs/timer/: core.cfg  timerconfig.cfg
assets/data0_21/huds/: adem.hud  classic.hud  default.hud  default_touch.hud  spec.hud
assets/data0_21/l10n/: be.po  bg.po  credits.txt  de.po  el.po  es.po  es_419.po  fi.po  fr.po  hu.po  it.po  ja.po  lt.po  main_en.po  nl.po  pl.po  pt.po  pt_br.po  ro.po  ru.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po
assets/data0_21/minimaps/: wfamphi1.ktx  wfbomb1.ktx  wfbomb2.ktx  wfbomb3.ktx  wfbomb4.ktx  wfbomb5.ktx  wfbomb6.ktx  wfca1.ktx  wfca2.ktx  wfca3.ktx  wfctf1.ktx  wfctf2.ktx  wfctf3.ktx  wfctf4.ktx  wfctf5.ktx  wfctf6.ktx  wfda1.ktx  wfda2.ktx  wfda3.ktx  wfdm1.ktx  wfdm10.ktx  wfdm11.ktx  wfdm12.ktx  wfdm13.ktx  wfdm14.ktx  wfdm15.ktx  wfdm16.ktx  wfdm17.ktx  wfdm18.ktx  wfdm19.ktx  wfdm2.ktx  wfdm21.ktx  wfdm22.ktx  wfdm3.ktx  wfdm4.ktx  wfdm5.ktx  wfdm6.ktx  wfdm7.ktx  wfdm8.ktx  wfdm9.ktx
assets/data0_21/navigation/: wfamphi1.nav  wfamphi2.nav  wfbomb1.nav  wfbomb2.nav  wfbomb3.nav  wfbomb4.nav  wfbomb5.nav  wfbomb6.nav  wfca1.nav  wfca2.nav  wfca3.nav  wfca4.nav  wfctf1.nav  wfctf2.nav  wfctf3.nav  wfctf4.nav  wfctf5.nav  wfctf6.nav  wfda1.nav  wfda2.nav  wfda3.nav  wfda4.nav  wfda5.nav  wfdm1.nav  wfdm10.nav  wfdm11.nav  wfdm12.nav  wfdm13.nav  wfdm14.nav  wfdm15.nav  wfdm16.nav  wfdm17.nav  wfdm18.nav  wfdm19.nav  wfdm2.nav  wfdm3.nav  wfdm4.nav  wfdm5.nav  wfdm6.nav  wfdm7.nav  (+7 more)
assets/data0_21pure/env/: 36sky.ktx  36sky_up.ktx  cell_nx.tga  cell_ny.tga  cell_nz.tga  cellbright_nx.tga  cellbright_nz.tga  cellbright_pz.tga  celldouble_ny.tga  celldouble_nz.tga  celldouble_px.tga  celllight_px.tga  celllight_py.tga  city1_bk.ktx  city1_dn.ktx  city1_ft.ktx  city1_lf.ktx  city1_rt.ktx  city1_up.ktx  city1blue_bk.ktx  city1blue_dn.ktx  city1blue_ft.ktx  city1blue_lf.ktx  city1blue_rt.ktx  city1blue_up.ktx  nightredsky.ktx  nightredsky_up.ktx  nightsky.ktx  nightsky_up.ktx  starsky.ktx  starsky_up.ktx  wamphi3.ktx  wtest15a_nx.tga  wtest15a_ny.tga  wtest15a_nz.tga  wtest15a_px.tga  wtest15a_py.tga  wtest15a_pz.tga  znsky_nx.tga  znsky_ny.tga  (+4 more)
assets/data0_21pure/scripts/: 36.shader  alley.shader  ammobox.shader  baxandall.shader  bigvic.shader  billboard.shader  blx.shader  (+93 more)
assets/profiles/: contrast.cfg  high+.cfg  high.cfg  low.cfg  medium.cfg  stream.cfg
icons/: warfork.icns  warfork128x128.xpm  warfork256x256.xpm
source/: CMakeLists.txt  compile_commands.json
source/cgame/: CMakeLists.txt  cg_cmds.cpp  cg_ents.cpp  cg_events.cpp  cg_hud.cpp  cg_lents.cpp  cg_local.h  cg_main.cpp  cg_media.cpp  cg_players.cpp  cg_pmodels.cpp  cg_predict.cpp  cg_scoreboard.cpp  cg_screen.cpp  cg_teams.cpp
source/cin/: cin_roq.c
source/client/: CMakeLists.txt  cl_demo.c  cl_discord.c  cl_game.c  cl_input.c  cl_main.c  cl_mm.c  cl_parse.c  cl_presence.c  cl_screen.c  cl_serverlist.c  cl_sound.c  cl_ui.c  cl_vid.c  client.h  console.c  keys.c  keys.h
source/cmake/: FindAngelscript.cmake  FindOgg.cmake  FindOpenAL.cmake  FindRocket.cmake  FindTheora.cmake  FindVorbis.cmake
source/game/: g_ascript.cpp  g_clip.cpp  g_cmds.cpp  g_combat.cpp  g_gametypes.cpp  g_local.h  g_target.cpp  g_utils.cpp  g_weapon.cpp  p_client.cpp  p_hud.cpp  p_weapon.cpp
source/gameshared/: config.h  gs_items.c  gs_public.h  gs_qrespath.h  gs_ref.h  q_arch.h  q_comref.h  q_math.c  q_math.h  q_shared.c  q_shared.h
source/irc/: irc_client.c  irc_interface.c  irc_interface.h  irc_logic.c  irc_logic.h  irc_protocol.c  irc_protocol.h
source/mac/: Warfork-Info.plist
source/matchmaker/: mm_common.c  mm_query.c  mm_query.h
source/qalgo/: hash.c
source/qcommon/: cm_trace.c  cmd.c  cmodel.h  common.c  compression.c  compression.h  cvar.c  files.c  irc.c  l10n.c  mlist.c  net.c  net_chan.c  qcommon.h  snap_demos.c  snap_write.c  steam.c  steam.h  sys_fs.h  sys_vfs_zip.c  version.h  version.warfork.h
source/ref_gl/: CMakeLists.txt  qgl.h  r_cmds.c  r_frontend.c  r_glimp.h  r_image.c  r_imagelib.c  r_local.h  r_math.c  r_register.c
source/sdl/: sdl_input.c
source/server/: CMakeLists.txt  server.h  sv_client.c  sv_demos.c  sv_game.c  sv_main.c  sv_oob.c  sv_web.c
source/snd_openal/: CMakeLists.txt  snd_al.c  snd_local.h  snd_main.c
source/snd_qf/: snd_local.h
source/steamlib/: CMakeLists.txt  steamlib_main.cpp  steamlib_public.h  steamlib_syscalls.cpp
source/steamshim/: CMakeLists.txt  pipe.c  pipe.h  steamshim_child.c  steamshim_child.h  steamshim_local.h  steamshim_parent.cpp  steamshim_types.h
source/steamshim/src/: os.cpp  os.h  pipe.cpp  steamshim.h  steamshim_private.h  steamshim_types.h
source/steamshim/src/child/: child.cpp  child.h  child_private.h
source/steamshim/src/parent/: SteamBridge.cpp  parent.cpp  parent_private.h
source/tv_server/: CMakeLists.txt  tv_cmds.c  tv_downstream.c  tv_downstream_clcmd.c  tv_relay_svcmd.c  tv_upstream_demos.c
source/ui/: ui_public.h
source/unix/: unix_fs.c  unix_glw.c  unix_input.c  unix_time.c  unix_vid.c
source/win32/: win_fs.c  win_time.c
(+2027 files in other folders)
